# medical-tax-deduction

./: .env.example  .gitignore  CLAUDE.md  README.md  ci.yml  docker-compose.yml  init_repo.sh  main.py  pipeline.py  push.sh  run_checks.py
.claude/: settings.local.json
.claude/commands/: shadcn.md  webui.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.paddleocr  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_indexes.py  0003_otp_batch.py  0004_encryption.py  0005_rls_policies.py  0006_dedup_fields.py  0007_fiscal_unique.py  0008_prescription_items.py  0009_duplicate_review_status.py  0010_deduction_engine.py  0011_document_model.py  0012_receipt_prescription_id.py  0013_drop_prescription_status.py
backend/app/: config.py  dependencies.py  main.py
backend/app/middleware/: rls.py
backend/app/models/: __init__.py  batch_job.py  document.py  enums.py  expense.py  export_job.py  family.py  income.py  otp_code.py  prescription.py  receipt.py  receipt_item.py  user.py
backend/app/routers/: admin.py  auth.py  batch.py  calculator.py  documents.py  expenses.py  export.py  prescriptions.py  receipts.py  tax_limits.py
backend/app/schemas/: auth.py  batch.py  prescription.py  receipt.py
backend/app/services/auth/: jwt_service.py  mini_app_service.py  otp_service.py
backend/app/services/deduction/: __init__.py  calculator.py  family_optimizer.py  limits.py  ndfl.py  types.py  year_planner.py
backend/app/services/dedup/: prescription_dedup.py  receipt_dedup.py
backend/app/services/export/: cover_letter.py  pdf_registry.py  zip_packager.py
backend/app/services/ocr/: batch_classifier.py  drug_normalizer.py  easyocr_engine.py  image_preprocessor.py  ocr_result.py  openai_vision.py  pipeline.py  qr_scanner.py  result_merger.py  tesseract_engine.py
backend/app/services/prescriptions/: pdf_blank.py  search_service.py
backend/app/services/storage/: encryption.py  s3_client.py
backend/data/: grls_drugs.json
backend/prompts/: receipt_ocr_system.md
backend/tests/: test_batch_models.py  test_health.py  test_models.py  test_s3_client.py
backend/tests/test_auth/: test_auth_router.py  test_jwt_service.py  test_mini_app_auth.py  test_otp_service.py
backend/tests/test_batch/: test_batch_api.py  test_sse.py
backend/tests/test_deduction/: conftest.py  test_calculator.py  test_family_optimizer.py  test_limits.py  test_ndfl.py  test_year_planner.py
backend/tests/test_export/: test_cover_letter.py  test_pdf_registry.py
backend/tests/test_middleware/: test_rls.py
backend/tests/test_migrations/: test_rls_migration.py
backend/tests/test_ocr/: test_classifier.py  test_drug_normalizer.py  test_engines.py  test_merger.py  test_pipeline.py  test_preprocessor.py  test_qr_scanner.py
backend/tests/test_prescriptions/: test_pdf_blank.py  test_router.py  test_search_service.py
backend/tests/test_receipts/: test_router.py  test_summary.py
backend/tests/test_storage/: test_encryption.py
backend/tests/test_tax_limits/: test_tax_limits_router.py
backend/tests/test_workers/: test_cleanup_task.py  test_ocr_task.py
backend/workers/: celery_app.py  sse_publisher.py
backend/workers/tasks/: batch_task.py  cleanup_task.py  export_task.py  ocr_task.py
bot/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
bot/handlers/: commands.py  conversations.py  errors.py  prescription_dialog.py  receipt_flow.py
bot/services/: api_client.py  token_storage.py
bot/tests/test_bot/: test_api_client.py  test_commands.py  test_otp_auth.py  test_prescription_dialog.py  test_receipt_flow.py
docs/admin/: 00-overview.md  01-backend.md  02-celery-worker.md  03-frontend.md  04-bot.md  05-postgres.md  06-redis.md  07-nginx.md  08-yandex-cloud.md  README.md
frontend/: CLAUDE.md  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/e2e/: perf-check.spec.ts
infra/: docker-compose.yml
infra/nginx/: medvychet.systemtool.online.conf  medvychet.systemtool.ru.conf  nginx-init.conf  (+1 more)
proekt/: PRD.md  PRD_SocialVychet_Lechenie_v1.md  PRD_dashboard_redesign.md  RALPH_PROMPT.md  analiz.txt  b01_s3client.patch  create_scaffold.py  init_scaffold.sh  prd_to_task_dashboard_redesign.md  progress.txt  progress_dashboard_redesign.md  ralph.py  ralph.sh  tasks.json  tasks_dashboard_redesign.json  Разработка дашборт.txt
(+66 files in other folders)
