[project]
name = "medvychet-backend"
version = "0.1.0"
description = "MedВычет backend API and OCR workers"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Task queue
    "celery>=5.4.0",
    "redis>=5.2.0",
    # Object Storage (Yandex / S3-compatible)
    "boto3>=1.35.0",
    # OCR
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
    "opencv-python-headless>=4.10.0",
    "pyzbar>=0.1.9",
    # NLP / fuzzy matching
    "rapidfuzz>=3.10.0",
    # Telegram
    "python-telegram-bot>=21.6",
    # Config / validation
    "pydantic-settings>=2.6.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # PDF generation
    "reportlab>=4.2.0",
    "weasyprint>=62.0",
    "qrcode[pil]>=8.0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.18.0",
    # Encryption
    "cryptography>=43.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Pillow (required by easyocr / qrcode)
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "moto[s3]>=5.0.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
